model ticket-assignments
